Style fix for collapse state

--- a/src/sass/_collapse.sass
+++ b/src/sass/_collapse.sass
@@ -1,7 +1,8 @@
 .collapse-tabs
   .nav-link
     width: 72px
-    padding: 1.125rem 1rem
+    padding-left: 1rem
+    padding-right: 1rem
   .logo-title
     opacity: 0
     width: 0
